Bug 473897 - Cannot add Google Groupware, "Configured account does not exist" then "Resource is not configured"
Summary: Cannot add Google Groupware, "Configured account does not exist" then "Resour...
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: Google Resource (other bugs)
Version First Reported In: 5.24.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 373348 474119 475283 475826 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-08-29 14:25 UTC by Serena Star
Modified: 2023-11-22 18:21 UTC (History)
30 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Entire log for Fresh Install of PIM (670.81 KB, text/x-log)
2023-09-05 22:01 UTC, jshand2013
Details
y2logs 1 (3.91 MB, application/x-xz)
2023-09-05 22:04 UTC, jshand2013
Details
y2logs 2 (3.91 MB, application/octet-stream)
2023-09-05 22:05 UTC, jshand2013
Details
y2logs 3 (3.91 MB, application/octet-stream)
2023-09-05 22:06 UTC, jshand2013
Details
y2logs 4 (3.91 MB, application/octet-stream)
2023-09-05 22:07 UTC, jshand2013
Details
y2logs 5 (1.23 MB, application/octet-stream)
2023-09-05 22:07 UTC, jshand2013
Details
First Google Groupware works, 2nd doesn't (27.18 KB, image/png)
2023-10-15 22:19 UTC, Serena Star
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Serena Star 2023-08-29 14:25:02 UTC
SUMMARY
***
Cannot sync calendar events from Google Accounts. When account is newly set up,  "Configured account does not exist"  error appears, refreshing gives "Resource is not configured". Calendars do not show up anywhere.
***


STEPS TO REPRODUCE
1. Add Google Groupware account
2. Configure and save
3. "Resource is not configured" appears. Managing this resource brings up google login in browser again.
4. Refresh to see "Resource is not configured"
5. Calendars do not appear/sync

OBSERVED RESULT
Calendars do not appear/sync

EXPECTED RESULT
Calendars sync successfully, resource says "Ready"

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Kernel - 6.4.12-arch1-1 (64-bit)
(available in About System)
KDE Plasma Version: 5.27.7
KDE Frameworks Version: 5.109.0
Qt Version: 5.15.10

ADDITIONAL INFORMATION
Comment 1 fake.name 2023-08-29 16:24:42 UTC
Same problem on similar system. The bug was not present until after last frameworks update. Prior to this problem, had bug 444288 instead.
Comment 2 whatifgodwasoneofus 2023-08-29 19:09:57 UTC
This happens also on Manjaro.
It got broken with kdepim v23.08. v23.04 worked correctly.
Comment 3 Jean-Michaël Celerier 2023-08-31 17:22:55 UTC
Can confirm issue on a fresh Arch Linux install
Comment 4 Cyrille Dunant 2023-09-01 19:45:02 UTC
can confirm on onpensuse
Comment 5 Txutxifel 2023-09-02 17:16:51 UTC
Hiu
I can confirm it in Opensuse 15.5  too.
KDE Plasma Version: 5.27.7
KDE Frameworks Version: 5.109.0
Qt Version: 5.15.10
Comment 6 Colin J Thomson 2023-09-03 17:09:32 UTC
Also seeing this, my temporary work around was to downgrade libkgapi to the previous version 23.04.3-2 which also downgraded a couple of other packages, kdepim-runtime* and kf5-kmailtransport-akonadi.
Not ideal but works for me.
Comment 7 Colin J Thomson 2023-09-03 22:24:33 UTC
*** Bug 474119 has been marked as a duplicate of this bug. ***
Comment 8 Niklas Mueller 2023-09-05 14:37:54 UTC
(In reply to Colin J Thomson from comment #6)
> Also seeing this, my temporary work around was to downgrade libkgapi to the
> previous version 23.04.3-2 which also downgraded a couple of other packages,
> kdepim-runtime* and kf5-kmailtransport-akonadi.
> Not ideal but works for me.

That worked for me, thank you so much!
Comment 9 jshand2013 2023-09-05 22:01:46 UTC
Created attachment 161427 [details]
Entire log for Fresh Install of PIM

I did a fresh install of kontact kdepim groupware suite.  i also did a debuginfod debug on the entire setup.  i hope this information is useful.

i also made sure that these packages were installed but they weren't at the time of install:

1.  libkgapi
2.  akonadi-calendar
3.  akonadi-mime

i think these must be made dependencies for this suite otherwise you won't be able to use it
Comment 10 jshand2013 2023-09-05 22:04:56 UTC
Created attachment 161428 [details]
y2logs 1
Comment 11 jshand2013 2023-09-05 22:05:42 UTC
Created attachment 161429 [details]
y2logs 2
Comment 12 jshand2013 2023-09-05 22:06:42 UTC
Created attachment 161430 [details]
y2logs 3
Comment 13 jshand2013 2023-09-05 22:07:25 UTC
Created attachment 161431 [details]
y2logs 4
Comment 14 jshand2013 2023-09-05 22:07:56 UTC
Created attachment 161432 [details]
y2logs 5
Comment 15 Colin J Thomson 2023-09-09 12:22:50 UTC
*** Bug 373348 has been marked as a duplicate of this bug. ***
Comment 16 David Korth 2023-09-11 00:41:45 UTC
Can verify that downgrading KDEPIM from 23.08 to 23.04.3 fixed this issue here. (Using Gentoo Linux.)
Comment 17 Carl Schwan 2023-09-11 14:12:53 UTC
Git commit f33496a346f49e95caaf7f664ef2f91e4b7f3ddb by Carl Schwan.
Committed on 11/09/2023 at 16:12.
Pushed by carlschwan into branch 'release/23.08'.

Revert "Use config plugin instead of out of process config dialog"

This reverts commit 28d264826798f8e1c9c33b17cb46d3906bd57e62.

M  +27   -66   resources/google-groupware/CMakeLists.txt
D  +0    -43   resources/google-groupware/googleconfig.cpp
D  +0    -5    resources/google-groupware/googleconfig.json
M  +65   -30   resources/google-groupware/googleresource.cpp
M  +2    -2    resources/google-groupware/googleresource.h
D  +0    -19   resources/google-groupware/googlescopes.cpp
D  +0    -10   resources/google-groupware/googlescopes.h
M  +5    -17   resources/google-groupware/googlesettings.cpp
M  +1    -10   resources/google-groupware/googlesettings.h
A  +305  -0    resources/google-groupware/googlesettingsdialog.cpp     [License: GPL(v3.0+)]
R  +16   -13   resources/google-groupware/googlesettingsdialog.h [from: resources/google-groupware/googlesettingswidget.h - 053% similarity]
R  +1    -1    resources/google-groupware/googlesettingsdialog.ui [from: resources/google-groupware/googlesettingswidget.ui - 099% similarity]
D  +0    -288  resources/google-groupware/googlesettingswidget.cpp
M  +1    -1    resources/google-groupware/settingsbase.kcfg

https://invent.kde.org/pim/kdepim-runtime/-/commit/f33496a346f49e95caaf7f664ef2f91e4b7f3ddb
Comment 18 Carl Schwan 2023-09-11 14:17:21 UTC
Sorry for the inconvenience, this was caused by a refactor which I have now reverted on the release/23.08 branch :(

Fix should be in 23.08.1 which should be released on the 14th.
Comment 19 Peter Ries 2023-09-14 15:37:28 UTC
I updated toad to 23.08.01 - no luck. Still the not syncing issue. After trying to re-add google account it remains in state (not configured)
Comment 20 Niklas Mueller 2023-09-14 15:44:12 UTC
I also made an update to 23.08.1 and it's still not working.
Comment 21 Grósz Dániel 2023-09-14 17:22:44 UTC
Some related earlier bug reports: Bug 357819, Bug 444288. These are earlier reports, while the current iteration of the issue only started recently, so it's unclear if these (or the Bug 373348 already marked as a duplicate) really are the same issue.
Comment 22 Cyrille Dunant 2023-09-14 18:40:08 UTC
In 23.08.1, still occurs -- in fact the dialog to configure the resource doesn't even show up any more, which it did previously.
Comment 23 Erasmo Caponio 2023-09-20 08:17:35 UTC
(In reply to Cyrille Dunant from comment #22)
> In 23.08.1, still occurs -- in fact the dialog to configure the resource
> doesn't even show up any more, which it did previously.

I confirm this on Manjaro with KDE Plasma 5.27.8
Comment 24 Erasmo Caponio 2023-09-20 08:30:32 UTC
(In reply to Erasmo Caponio from comment #23)
> (In reply to Cyrille Dunant from comment #22)
> > In 23.08.1, still occurs -- in fact the dialog to configure the resource
> > doesn't even show up any more, which it did previously.
> 
> I confirm this on Manjaro with KDE Plasma 5.27.8

and Kontact 23.08.1
Comment 25 Niklas Mueller 2023-09-20 16:41:15 UTC
With the release of an update of the kdepim-runtime today the problem got solved and the google groupware is working in my case now. But I had so set it up and configure with akonadiconsole itself.
Comment 26 Peter Ries 2023-09-20 18:22:49 UTC
same for me: works now. Used akonadi console directly. didn't try other options. Thanks!!
Comment 27 Cyrille Dunant 2023-09-20 19:20:39 UTC
Maybe an update will fix it, but it doesn't work for me, either through the console or kontact.
Comment 28 caxilbund 2023-09-20 23:08:33 UTC
I was able to set it up and configure it within korganizer. However, it came up with "the configured account doesn't exist" error message after I had supposedly configured it and the calendar did not appear. I hit the reset button in the settings calendar dialog, the error message disappeared, the ready message appeared, and lo and behold the calendar entries actually appeared in the user interface.
Comment 29 Cyrille Dunant 2023-09-21 07:43:16 UTC
I have managed to add the agent by creating it in the console, then shutting down akonadi, then editing the agent config file to add the network section which was missing:

[network]
Authentication=9
UserName=XXX

I am uncertain the username is required. But the [network] section definitely is, and I don't know why it's not created.
Comment 30 David de Cos 2023-10-05 11:56:23 UTC
(In reply to caxilbund from comment #28)
> I was able to set it up and configure it within korganizer. However, it came
> up with "the configured account doesn't exist" error message after I had
> supposedly configured it and the calendar did not appear. I hit the reset
> button in the settings calendar dialog, the error message disappeared, the
> ready message appeared, and lo and behold the calendar entries actually
> appeared in the user interface.

I have kdepim-runtime 23.08.1-3.1 in Opensuse Tumbleweed and this is the way I have managed to get my Google Calendar back. Thanks for the workaround!
Comment 31 Erasmo Caponio 2023-10-07 18:04:32 UTC
(In reply to Cyrille Dunant from comment #29)
> I have managed to add the agent by creating it in the console, then shutting
> down akonadi, then editing the agent config file to add the network section
> which was missing:
> 
> [network]
> Authentication=9
> UserName=XXX
> 
> I am uncertain the username is required. But the [network] section
> definitely is, and I don't know why it's not created.

Thanks, for the workroit seems to work now (In reply to caxilbund from comment #28)
> I was able to set it up and configure it within korganizer. However, it came
> up with "the configured account doesn't exist" error message after I had
> supposedly configured it and the calendar did not appear. I hit the reset
> button in the settings calendar dialog, the error message disappeared, the
> ready message appeared, and lo and behold the calendar entries actually
> appeared in the user interface.

Thanks, I had the same problem; it seems to work now by your workaround. Let's see if it works stably finally ... Anyway, thanks to KDE developers!!
Comment 32 Serena Star 2023-10-15 22:18:32 UTC
Tried to revisit this issue by trying to set up my primary google account. I have one account working, but the 2nd one says "not configured" and then "Can't fetch password". I tried adding the "[network] section" to the broken 2nd account but it fixes nothing. Bringing up the configuration window for Google Groupware just shows it all unpopulated. I can log into my 2nd Google account as many times as I want to no avail.
Comment 33 Serena Star 2023-10-15 22:19:59 UTC
Created attachment 162332 [details]
First Google Groupware works, 2nd doesn't

My first Google Groupware account works perfectly but the 2nd one fails, and shows nothing.
Comment 34 Riccardo Robecchi 2023-10-20 11:16:08 UTC
*** Bug 475283 has been marked as a duplicate of this bug. ***
Comment 35 Riccardo Robecchi 2023-10-20 11:18:01 UTC
*** Bug 475826 has been marked as a duplicate of this bug. ***
Comment 36 Carl Schwan 2023-11-22 18:21:22 UTC
Git commit fdaec5c3f9ac54fa1978a8f31230c5c2325cb931 by Carl Schwan.
Committed on 22/11/2023 at 19:36.
Pushed by carlschwan into branch 'release/23.08'.

Correctly reload configuration

We need to read the values from the file system again when the signal
Agent::reloadConfiguration is triggered.

Otherwise the new config will only be read at the next akonadi restart.

Fix pim/merkuro#223

M  +3    -9    resources/google-groupware/googleresource.cpp

https://invent.kde.org/pim/kdepim-runtime/-/commit/fdaec5c3f9ac54fa1978a8f31230c5c2325cb931