Correctly reload configuration

We need to read the values from the file system again when the signal
Agent::reloadConfiguration is triggered.

Otherwise the new config will only be read at the next akonadi restart.

Fix pim/merkuro#223
BUG: 473897