resources/google-groupware/googleresource.cpp
@@ -149,16 +149,10 @@ void GoogleResource::updateResourceName()
 
 void GoogleResource::reloadConfig()
 {
+    m_settings.load();
+    m_settings.init();
+
     updateResourceName();
-
-    const AccountPtr account = m_settings.accountPtr();
-    if (account.isNull() || account->accountName().isEmpty()) {
-        Q_EMIT status(NotConfigured, i18n("Configured account does not exist"));
-        return;
-    }
-
-    emitReadyStatus();
-    synchronize();
 }
 
 bool GoogleResource::handleError(KGAPI2::Job *job, bool _cancelTask)
